<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_google_signin_btn_text_light_pressed"
    tools:context="com.sheikhsoft.bondhu.ProfileActivity">



    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/default_avatar"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/profile_display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/profile_dispaly_name"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/profile_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_display_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/profile_user_current_status"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/profile_friend_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_status"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:text="@string/profile_total_friend"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/profile_friend_send_req_brn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_friend_number"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:background="@color/colorPrimaryDark"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/profile_send_friend_request"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <Button
        android:id="@+id/profile_decline_req_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_friend_send_req_brn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:background="@color/colorAccent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/profile_decline_friend_request"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />
</RelativeLayout>
