<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_single_image"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/user_single_profile_image"
        android:src="@drawable/default_man"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/user_single_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/user_single_image"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@+id/user_single_image"
        android:text="@string/user_single_display_name"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/user_single_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/user_single_image"
        android:layout_alignStart="@+id/user_single_name"
        android:layout_marginBottom="11dp"
        android:text="@string/user_single_user_defalt_status" />

    <ImageView
        android:id="@+id/user_single_online"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_alignBottom="@+id/user_single_name"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="50dp"
        android:layout_marginStart="320dp"
        android:contentDescription=""
        android:visibility="invisible"
        app:srcCompat="@drawable/online"
        tools:ignore="ContentDescription,RtlHardcoded" />

</RelativeLayout>