<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.sheikhsoft.bondhu.StartActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/start_welcome"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_sign_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/textView"
        android:layout_marginTop="30dp"></com.google.android.gms.common.SignInButton>


    <com.facebook.login.widget.LoginButton
        android:id="@+id/button_facebook_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingStart="0dp"
        android:textSize="18sp"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/google_sign_btn"
        android:layout_alignEnd="@+id/google_sign_btn"
        android:layout_alignStart="@+id/google_sign_btn"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/start_reg_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_reg_btn"
        android:textSize="12sp"
        android:layout_alignTop="@+id/start_login_btn"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/start_login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startt_already_have_account"
        android:textSize="12sp"
        android:layout_below="@+id/button_facebook_login"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp" />
</RelativeLayout>
