<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile_page_bg"
    tools:context="com.sheikhsoft.bondhu.SettingsActivity">

    <include
        android:id="@+id/setting_page_toolbar"
        layout="@layout/app_bar_layout" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/setting_cir_Img_view"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_below="@+id/setting_page_toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:src="@drawable/default_man" />

    <TextView
        android:id="@+id/setting_displayname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setting_cir_Img_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/setting_display_name"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/setting_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setting_displayname"
        android:layout_centerHorizontal="true"
        android:text="@string/setting_status"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="14sp" />


    <include
        android:id="@+id/include"
        layout="@layout/layout_bottom_navigation_view" />

    <ImageButton
        android:id="@+id/setting_setting_img_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"

        app:srcCompat="@drawable/ic_setting"
        android:contentDescription=""
        tools:ignore="ContentDescription"
        android:layout_below="@+id/setting_status"
        android:layout_toStartOf="@+id/setting_cir_Img_view" />

    <ImageButton
        android:id="@+id/setting_edit_info_image_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/setting_setting_img_btn"
        android:layout_toEndOf="@+id/setting_cir_Img_view"
        app:srcCompat="@drawable/ic_info_edit"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_settings"
        android:textAlignment="center"
        android:layout_below="@+id/setting_setting_img_btn"
        android:layout_alignStart="@+id/setting_setting_img_btn" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_edit_profile"
        android:textAlignment="center"
        android:layout_below="@+id/setting_edit_info_image_btn"
        android:layout_alignStart="@+id/setting_edit_info_image_btn" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView4"
        android:layout_centerHorizontal="true"
        app:srcCompat="?android:attr/fastScrollThumbDrawable"
        android:contentDescription=""
        tools:ignore="ContentDescription" />

</RelativeLayout>
